# langgraph-claude-azure-mcp

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  claude_mcp_config.json  pyproject.toml  pytest.ini  visualize.py
.github/: GITHUB_SEO_SETUP.md  REPOSITORY_METADATA.md  SOCIAL_MEDIA.md  copilot-instructions.md  topics.json
docs/guides/: CLAUDE_SETUP_GUIDE.md
src/azure_search_mcp/: __init__.py  __main__.py  azure_search.py  chain.py  config.py  prompt_manager.py  prompts.json  server.py
tests/: run_tests.py  test_chain.py  test_env_loading.py  test_integration.py  verify_claude_setup.py
tools/: debug_tools_timeout.py  test_prompts_list.py
visualization/: __init__.py  dynamic_graph_viz.py  visualize_launcher.py
